--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,14 @@ a {
   font-family: inherit;
 }
 .studio {
-  color: #2e2f42;
+  color: #f4f4fd;
 }
 .header-logo {
-  color: #2e2f42;
+  color: #4d5ae5;
   font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
@@ -69,8 +69,18 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
+.benifits-text {
+  color: #434455;
+  text-align: center;
+
+  font-family: Roboto;
+  font-size: 16px;
+
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
 .team {
-  background: var(--CLOUD, #f4f4fd);
+  background-color: #ffffff;
 }
 .team-title {
   color: #2e2f42;
