--- a/css/styles.css
+++ b/css/styles.css
@@ -48,16 +48,24 @@ a {
   height: 600px;
 }
 .business-title {
-  color: #fff;
-
+  ccolor: #fff;
+  text-align: center;
+  background-color: #4d5ae5;
   font-size: 56px;
   font-weight: 700;
-  line-height: 1.5;
+  line-height: 1.07;
   letter-spacing: 0.02em;
 }
 .business-button {
-  background: #4d5ae5;
-  cursor: pointer;
+  color: #fff;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+.business-button:hover .business-button:focus {
+  background-color: #404bbf;
 }
 .benifits {
   background: #fff;
@@ -80,7 +88,7 @@ a {
   letter-spacing: 0.02em;
 }
 .team {
-  background-color: #ffffff;
+  background-color: #f4f4fd;
 }
 .team-title {
   color: #2e2f42;
@@ -92,6 +100,9 @@ a {
   text-transform: capitalize;
 }
 .team-list {
+  background-color: #ffffff;
+}
+.team-items {
   background-color: #ffffff;
 }
 .team-subtitle {
