--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,9 @@ a {
   text-decoration: none;
   font-family: inherit;
 }
+.header-studio {
+  color: #2e2f42;
+}
 .studio {
   color: #f4f4fd;
 }
@@ -23,6 +26,15 @@ a {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+.header-items-link {
+  color: #2e2f42;
+}
+.header-items-link:hover {
+  color: #404bbf;
+}
+.header-items-link:focus {
+  color: #404bbf;
 }
 .header {
   background: #fff;
@@ -37,10 +49,16 @@ a {
 }
 .contacts-items-link {
   color: #434455;
-
+  font-style: normal;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+.contacts-items-link:hover {
+  color: #404bbf;
+}
+.contacts-items-link:focus {
+  color: #404bbf;
 }
 .business {
   background: #2e2f42;
