--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,9 @@ a {
 .contacts {
   font-style: normal;
 }
+.contacts-items {
+  font-style: normal;
+}
 .contacts-items-link {
   color: #434455;
   font-style: normal;
@@ -62,8 +65,6 @@ a {
 }
 .business {
   background: #2e2f42;
-  width: 1440px;
-  height: 600px;
 }
 .business-title {
   color: #ffffff;
@@ -103,10 +104,8 @@ a {
 .benifits-text {
   color: #434455;
   text-align: center;
-
   font-family: Roboto;
   font-size: 16px;
-
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -137,7 +136,7 @@ a {
 }
 .team-text {
   background: #fff;
-  color: var(--SLATE, #434455);
+  color: #434455;
   text-align: center;
   font-family: Roboto;
   font-size: 16px;
@@ -165,7 +164,6 @@ a {
 }
 .portfolio-text {
   color: #434455;
-
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -177,7 +175,6 @@ a {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
-
   font-weight: 700;
   line-height: 1.17;
   letter-spacing: 0.03em;
